Przd final. Koszyk, dodawanie, usuwanie, bug-fixes

--- a/Angular_Frontend/angular.json
+++ b/Angular_Frontend/angular.json
@@ -34,7 +34,10 @@
               "node_modules/ngx-toastr/toastr.css",
               "node_modules/ngx-spinner/animations/ball-clip-rotate.css"
             ],
-            "scripts": []
+            "scripts": [],
+            "allowedCommonJsDependencies": [
+              "cuid"
+            ]
           },
           "configurations": {
             "production": {
